完善上传和下载部分的代码